--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -1,6 +1,6 @@
 .app.dark {
-  --bg-color: #0e0e75;
+    --bg-color: #090949;
 
-  --primary-color: #049604;
-  --secondary-color: #04ff04;
+    --primary-color: #049604;
+    --secondary-color: #04ff04;
 }
