--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -1,10 +1,10 @@
 .button {
   cursor: pointer;
+  color: var(--primary-color);
 }
 
 .clear {
   padding: 0;
-  margin: 0;
   outline: 0;
   background: none;
   border: none;
