--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -2,7 +2,7 @@
   --bg-color: #e8e8ea;
   --inverted-bg-color: #090949;
 
-  --primary-color: #0232c2;
+  --primary-color: #be9714;
   --secondary-color: #0449e0;
 
   --inverted-primary-color: #049604;
