--- a/src/shared/ui/ui.scss
+++ b/src/shared/ui/ui.scss
@@ -1,6 +1,15 @@
 @import "./AppLink/AppLink.scss";
+@import "./BlockAlignText/BlockAlignText";
+@import "./BlockText/BlockText";
 @import "./Button/Button.scss";
-@import "./Column/Column.scss";
-@import "./Container/Container.scss";
-@import "./Row/Row.scss";
-@import "./VerticalOffset/VerticalOffset.scss";
+@import "./ErrorFallback/ErrorFallback";
+@import "./Grid/Column/Column.scss";
+@import "./Grid/Container/Container.scss";
+@import "./Grid/Row/Row.scss";
+@import "./Grid/Space/Space";
+@import "./Grid/VerticalOffset/VerticalOffset.scss";
+@import "./Loader/Loader";
+@import "./Menu/Menu";
+@import "./OlList/OlList";
+@import "./Text/Text";
+@import "./UlList/UlList";
