feat/#18: add new colors in themes

--- a/src/d-widgets/Header/ui/Header.scss
+++ b/src/d-widgets/Header/ui/Header.scss
@@ -1,5 +1,9 @@
 .header {
   width: 100%;
   height: var(--header-height);
-  background: var(--inverted-bg-color);
+  background: var(--color-background-dark);
+}
+
+.header--light {
+  box-shadow: var(--color-background-shadow-light);
 }
