--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,6 @@
 @import "./reset";
 @import "./variables/global";
-@import "./themes/normal";
+@import "./themes/light";
 @import "./themes/dark";
 @import "shared/ui/ui.scss";
 
