--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,10 +1,11 @@
 .app.dark {
-  --bg-color: #090949;
-  --inverted-bg-color: #e8e8ea;
+  --bg-color: var(--color-background-gradient-dark);
+  --inverted-bg-color: var(--color-background-light);
+  --sidebar-bg-color: var(--color-background-second-dark);
 
-  --primary-color: #049604;
-  --secondary-color: #04ff04;
+  --primary-color: #04ff04;
+  --secondary-color: #049604;
 
   --inverted-primary-color: #0232c2;
-  --inverted-secondary-color: #0449e0;
+  --inverted-secondary-color: #0452ff;
 }
