--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -5,7 +5,38 @@
 
 .clear {
   padding: 0;
-  outline: 0;
-  background: none;
   border: none;
+  background: none;
+  outline: none;
+}
+
+.outline {
+  padding: 10px 15px;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  background: none;
+}
+
+.background {
+  background: var(--bg-color);
+  color: var(--primary-color);
+  border: none;
+}
+
+.background-inv {
+  background: var(--inverted-bg-color);
+  color: var(--inverted-primary-color);
+  border: none;
+}
+
+// up css
+$sizes: m, l, xl;
+
+@each $size in $sizes {
+  .button--square--size-#{$size} {
+    width: var(--font-line-#{$size});
+    height: var(--font-line-#{$size});
+    padding: 0;
+    font-size: var(--font-size-#{$size});
+  }
 }
