feat/#20: add ModalWrapper, Input and icons

--- a/src/shared/ui/ui.scss
+++ b/src/shared/ui/ui.scss
@@ -1,15 +1,24 @@
 @import "./AppLink/AppLink.scss";
 @import "./BlockAlignText/BlockAlignText";
 @import "./BlockText/BlockText";
+@import "./BugButton/BugButton";
 @import "./Button/Button.scss";
+@import "./Checkbox/Checkbox";
 @import "./ErrorFallback/ErrorFallback";
+
 @import "./Grid/Column/Column.scss";
 @import "./Grid/Container/Container.scss";
 @import "./Grid/Row/Row.scss";
 @import "./Grid/Space/Space";
 @import "./Grid/VerticalOffset/VerticalOffset.scss";
+
+@import "./Icon/Icon";
+@import "./IconText/IconText";
+@import "./Input/Input";
 @import "./Loader/Loader";
+@import "./Logo/Logo";
 @import "./Menu/Menu";
+@import "./ModalWrapper/ModalWrapper";
 @import "./OlList/OlList";
 @import "./Text/Text";
 @import "./UlList/UlList";
