feat/#22: add lib concurrently and fix UI styles

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,11 +4,13 @@
 @import "./themes/dark";
 @import "shared/ui/ui.scss";
 
-.app {
+.app,
+.app__modal {
   font: var(--font-m);
-
-  background: var(--bg-color);
   color: var(--primary-color);
+}
 
+.app {
+  background: var(--bg-color);
   min-height: 100vh;
 }
