--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,11 +1,11 @@
-.app.dark {
+.app--dark-theme {
   --bg-color: var(--color-background-gradient-dark);
   --inverted-bg-color: var(--color-background-light);
   --sidebar-bg-color: var(--color-background-second-dark);
 
-  --primary-color: #04ff04;
-  --secondary-color: #049604;
+  --primary-color: var(--primary-color-dark);
+  --secondary-color: var(--secondary-color-dark);
 
-  --inverted-primary-color: #0232c2;
-  --inverted-secondary-color: #0452ff;
+  --inverted-primary-color: var(--inverted-primary-color-dark);
+  --inverted-secondary-color: var(--inverted-secondary-color-dark);
 }
