fix/#28: fix OlList

--- a/src/shared/ui/OlList/OlList.scss
+++ b/src/shared/ui/OlList/OlList.scss
@@ -17,7 +17,7 @@
 
   &__item:before {
     font-family: var(--font-main);
-    color: currentColor;
+    color: var(--primary-color);
 
     counter-increment: li;
     content: counters(li, ".") ". ";
