feat/#29: add styles in WeekDataListItem

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -72,6 +72,8 @@
   --block-shadow-tablet: 0px 4px 38px rgba(51, 51, 51, 0.1);
   --block-shadow-mobile: 0px 4px 34px rgba(51, 51, 51, 0.1);
 
+  --block-shadow-other: 4px 4px 8px rgba(34, 60, 80, 0.2);
+
   --icon-shadow-large: 0px 8px 26px rgba(51, 51, 51, 0.1);
   --icon-shadow-medium: 0px 8px 20px rgba(51, 51, 51, 0.1);
 
