--- a/src/e-features/WorkTimeTracking/ui/WeekDataList/WeekDataList.scss
+++ b/src/e-features/WorkTimeTracking/ui/WeekDataList/WeekDataList.scss
@@ -1,2 +1,8 @@
-.WeekDataList {
+.weeks-list {
+  &__item {
+    padding: 12px;
+    background: var(--sidebar-bg-color);
+    box-shadow: var(--block-shadow-other);
+    border-radius: var(--accordion-border-radius);
+  }
 }
