--- a/src/shared/ui/Grid/Column/Column.scss
+++ b/src/shared/ui/Grid/Column/Column.scss
@@ -17,4 +17,5 @@
 @import "colunm-styles/column-col";
 @import "colunm-styles/column-order";
 @import "colunm-styles/column-align-self";
+@import "colunm-styles/column-align-items";
 @import "colunm-styles/column-display";
