--- a/src/shared/ui/OlList/OlList.scss
+++ b/src/shared/ui/OlList/OlList.scss
@@ -9,7 +9,7 @@
 
   &__item {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     column-gap: 4px;
 
     list-style-type: none;
