--- a/src/shared/ui/ui.scss
+++ b/src/shared/ui/ui.scss
@@ -1,6 +1,7 @@
 @import "./AppLink/AppLink.scss";
 @import "./BlockAlignText/BlockAlignText";
 @import "./BlockText/BlockText";
+@import "./BlockWithShadow/BlockWithShadow";
 @import "./BugButton/BugButton";
 @import "./Button/Button.scss";
 @import "./Checkbox/Checkbox";
@@ -20,5 +21,6 @@
 @import "./Menu/Menu";
 @import "./ModalWrapper/ModalWrapper";
 @import "./OlList/OlList";
+@import "./Tag/Tag";
 @import "./Text/Text";
 @import "./UlList/UlList";
