--- a/src/d-widgets/Sidebar/ui/Sidebar/Sidebar.scss
+++ b/src/d-widgets/Sidebar/ui/Sidebar/Sidebar.scss
@@ -5,10 +5,22 @@
   width: var(--sidebar-width);
   position: relative;
   transition: width 0.4s;
+
+  padding: 20px 0;
+
+  &__link {
+    opacity: 1;
+    transition: 0.3s opacity;
+  }
 }
 
 .sidebar--collapsed {
   width: var(--sidebar-width-collapsed);
+
+  .sidebar__link {
+    opacity: 0;
+    transition: 0.3s opacity;
+  }
 }
 
 .sidebar--light {
