feat/#54: add EditableProfileCard and fix tags and styles in app

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -14,3 +14,12 @@ body, .app {
   background: var(--bg-color);
   min-height: 100vh;
 }
+
+.body {
+  display: flex;
+}
+
+.main {
+  padding: 10px;
+  width: 100%;
+}
