--- a/src/d-widgets/Sidebar/ui/SidebarItem/SidebarItem.scss
+++ b/src/d-widgets/Sidebar/ui/SidebarItem/SidebarItem.scss
@@ -6,3 +6,9 @@
     transition: 0.3s opacity;
   }
 }
+
+.sidebar--collapsed {
+  .sidebar-item {
+    padding-left: calc(var(--sidebar-width-collapsed) / 2 - 12px);
+  }
+}
