--- a/src/f-entities/Profile/ui/ProfileCard/ProfileCard.scss
+++ b/src/f-entities/Profile/ui/ProfileCard/ProfileCard.scss
@@ -2,3 +2,10 @@
   padding: 20px;
   border: 1px solid var(--inverted-bg-color);
 }
+
+.loading, .error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+}
