feat/#64: add headlessUI and ListBox

--- a/src/g-shared/ui/ui.scss
+++ b/src/g-shared/ui/ui.scss
@@ -14,6 +14,7 @@
 @import "./Icon/Icon";
 @import "./IconText/IconText";
 @import "./Input/Input";
+@import "./ListBox/ListBox";
 @import "./Loader/Loader";
 @import "./Logo/Logo";
 @import "./Menu/Menu";
